Pull request 727: AG-49270: Fix position of search field in rules editor
Merge in SCITER/adguard-mini from 
AG-49270-fix-search-field to master

Squashed commit of the following:

commit 311d5be5fa8df1083051448dc4a2196baa24646b
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Fri Jan 30 16:14:45 2026 +0300

    AG-49270: Fix position of search field in rules editor

--- a/AdguardMini/sciter-ui/modules/userrules/Editor/Editor.pcss
+++ b/AdguardMini/sciter-ui/modules/userrules/Editor/Editor.pcss
@@ -15,7 +15,13 @@
 
 .CodeMirror-dialog-top {
   border-bottom: 1px solid #eee;
+  border-left: 1px solid #eee;
   top: 0;
+  left: 50%;
+
+  > span {
+    display: block;
+  }
 }
 
 .CodeMirror-dialog-bottom {
